# serial_to_fermentrack

./: .coveragerc  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  __main__.py  brewpi_daemon.py  brewpi_rest.py  config_manager.py  create_systemd_service.sh  list_devices.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  run_coverage.sh  serial_to_fermentrack_daemon.py  setup.py
.github/workflows/: build-and-release.yml
api/: __init__.py  client.py
config/: README.md
controller/: __init__.py  brewpi_controller.py  models.py  serial_controller.py
logs/: README.md
tests/: __init__.py  test_api_client.py  test_brewpi_rest.py  test_config.py  test_config_manager_operations.py  test_config_manager_registration.py  test_config_manager_serial.py  test_config_manager_unused_configs.py  test_config_manager_utilities.py  test_controller.py  test_daemon.py  test_daemon_log_monitoring.py  test_logging.py  test_parse_responses_timeout.py  test_serial_controller.py  test_watchdog.py
utils/: __init__.py  config.py  logging.py
