[project]
name = "bpr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.6.3",
    "pyserial==3.5",
    "requests==2.32.0",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "pydantic==2.6.3",
    "pyserial==3.5",
    "pytest==7.4.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.12.0",
    "requests==2.32.0",
    "requests-mock==1.11.0",
    "watchdog==6.0.0",
]
