[project]
name = "serial-to-fermentrack"
version = "0.0.1"
description = "Fermentrack REST API client for serial-connected BrewPi devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inquirer>=2.10.0",
    "pydantic==2.6.3",
    "pyserial>=3.5",
    "requests>=2.32.3",
    "uuid>=1.30",
    "watchdog==6.0.0",
]

[project.scripts]
serial_to_fermentrack = "brewpi_rest:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests", "htmlcov"]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==6.0.0",
    "pytest-mock==3.12.0",
    "requests-mock==1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
