[project]
name = "serial-to-fermentrack"
version = "0.0.4"
description = "Fermentrack REST API client for serial-connected BrewPi devices"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "inquirer>=2.10.0",
    "pydantic==2.11.4",
    "pyserial>=3.5",
    "requests>=2.32.3",
    "uuid>=1.30",
    "watchdog==6.0.0",
]

[project.scripts]
serial_to_fermentrack = "brewpi_rest:main"
serial_to_fermentrack_daemon = "serial_to_fermentrack_daemon:main"
serial_to_fermentrack_config = "config_manager:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests", "htmlcov"]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "pytest-mock==3.14.0",
    "requests-mock==1.12.1",
    "setuptools==80.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
